--- a/assets/styles/branding.css
+++ b/assets/styles/branding.css
@@ -5,7 +5,7 @@
   --background-light: rgba(44, 44, 44, 0.9);
   --background-lighter: #494949;
   --brand-color: #49B5D8;
-  --brand-color-dark: #34849e;
+  --brand-color-dark: #30738a;
   --scrollbar-color: #49B5D8;
   --text-color: #fff;
   --green: #5dd849;
